--- a/images.ipynb
+++ b/images.ipynb
@@ -3,8 +3,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-13T05:29:15.075571Z",
-     "start_time": "2024-10-13T05:29:13.975503Z"
+     "end_time": "2024-10-13T06:40:54.635270Z",
+     "start_time": "2024-10-13T06:40:51.550815Z"
     }
    },
    "cell_type": "code",
@@ -25,7 +25,7 @@
      "output_type": "stream",
      "text": [
       "Normalize images\n",
-      "Start time: 2024-10-13 07:29:14.010801\n",
+      "Start time: 2024-10-13 08:40:53.571240\n",
       "Skipping ./archive/resized/Surprise/1bd930d6a1c717c11be33db74823f661cb53f86cbba1d3d1f336cdf9~12fffff.jpg as it already normalized.\n",
       "Skipping ./archive/resized/Surprise/cropped_emotions.100096~12fffff.png as it already normalized.\n",
       "Skipping ./archive/resized/Surprise/0df0e470e33093f5b72a8197fa209d684032cc17f68194e605a26897~12fffff.jpg as it already normalized.\n",
@@ -14274,25 +14274,27 @@
       "Skipping ./archive/resized/Angry/cropped_emotions.232276~angry.png as it already normalized.\n",
       "Skipping ./archive/resized/Angry/0aa9ec997e4faa4499e0aa3efac5ab97db10942326a261b3a7ccb449~angry.jpg as it already normalized.\n",
       "Skipping ./archive/resized/Angry/7fdcf428267020e7b1b063745c0834ae6ccb9125522f09e2d12f5eb0~angry.jpg as it already normalized.\n",
-      "End time: 2024-10-13 07:29:15.072224\n",
-      "duration: 0:00:01.061423\n",
+      "End time: 2024-10-13 08:40:54.631655\n",
+      "duration: 0:00:01.060415\n",
       "processed images: 0\n",
       "skipped images: 14248\n"
      ]
     }
    ],
-   "execution_count": 5
+   "execution_count": 1
   },
   {
    "metadata": {
+    "jupyter": {
+     "is_executing": true
+    },
     "ExecuteTime": {
-     "end_time": "2024-10-13T05:29:15.410902Z",
-     "start_time": "2024-10-13T05:29:15.112292Z"
+     "start_time": "2024-10-13T06:51:07.063476Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "from image_util import load_and_normalize, to_grayscale, to_histgram, to_pca\n",
+    "from image_util import load_and_normalize, to_grayscale, to_histgram, to_pca, to_norm\n",
     "import datetime\n",
     "\n",
     "# Correct paths to your dataset\n",
@@ -14322,6 +14324,11 @@
     "pca_time = datetime.datetime.now()\n",
     "print(f\"pca time: {pca_time - histgram_time}\")\n",
     "\n",
+    "# Step 4 - Normalization\n",
+    "norm_images = to_norm(pca_images)\n",
+    "norm_time = datetime.datetime.now()\n",
+    "print(f\"norm time: {norm_time - pca_time}\")\n",
+    "\n",
     "\n",
     "end_time = datetime.datetime.now()\n",
     "print(f\"End Time: {end_time}\")\n",
@@ -14332,25 +14339,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Start Time 2024-10-13 07:29:15.116084\n",
-      "loading time: 0:00:00.118683\n",
-      "grayscale time: 0:00:00.010672\n",
-      "histogram time: 0:00:00.141386\n",
-      "pca time: 0:00:00.021379\n",
-      "End Time: 2024-10-13 07:29:15.408335\n",
-      "Total Duration: 0:00:00.292251\n"
+      "Start Time 2024-10-13 08:51:07.068863\n",
+      "loading time: 0:00:17.696552\n",
+      "grayscale time: 0:00:01.566022\n"
      ]
     }
    ],
-   "execution_count": 6
+   "execution_count": null
   },
   {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-10-13T05:29:15.446521Z",
-     "start_time": "2024-10-13T05:29:15.443481Z"
-    }
-   },
+   "metadata": {},
    "cell_type": "code",
    "source": "",
    "outputs": [],
