--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -137,7 +137,7 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "file_path = r'C:/Users/kasse/Documents/faceRecog/archive/data.csv'\n",
+    "file_path = r'./archive/data.csv'\n",
     "df = pd.read_csv(file_path)\n",
     "\n",
     "# Display the first few rows of the dataset\n",
