add K-fold validation

--- a/LR.ipynb
+++ b/LR.ipynb
@@ -20,14 +20,13 @@
   {
    "metadata": {},
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": [
     "from image_util import load_and_normalize, to_grayscale, to_histgram, to_pca, to_norm\n",
     "import datetime\n",
     "from sklearn.preprocessing import LabelEncoder\n",
     "from sklearn.model_selection import train_test_split\n",
     "import numpy as np\n",
+    "from logistic_regression import cross_validate_model, LogisticRegression\n",
     "\n",
     "# Correct paths to your dataset\n",
     "csv_file = r\"./archive/data.csv\"\n",
@@ -72,13 +71,35 @@
     "# Step 6 - # Split into training, validation, and test sets\n",
     "images_train_full, images_test, labels_train_full, labels_test = train_test_split(norm_images, labels_one_hot, test_size=0.2, random_state=42)\n",
     "images_train, images_val, labels_train, labels_val = train_test_split(images_train_full, labels_train_full, test_size=0.2, random_state=42)\n",
-    "print(f\"split dataset time: {labels_one_hot}\")\n",
+    "split_time = datetime.datetime.now()\n",
+    "print(f\"split dataset time: {split_time - one_hot_time}\")\n",
     "\n",
+    "# Step 7 - Cross validate the model\n",
+    "cross_validation_accuracy = cross_validate_model(norm_images, labels_one_hot, num_folds=5)\n",
+    "cross_validation_time = datetime.datetime.now()\n",
+    "print(f\"cross validation time: {cross_validation_time - split_time}\")\n",
+    "\n",
+    "# Step 8 - Train the model\n",
+    "final_model = LogisticRegression(input_size=images_train_full.shape[1], num_classes=labels_train_full.shape[1], learning_rate=0.1,\n",
+    "                                 regularization=0.001)\n",
+    "\n",
+    "final_model.train(images_train_full, labels_train_full, epochs=1000)\n",
+    "train_time = datetime.datetime.now()\n",
+    "print(f\"train time: {train_time - cross_validation_time}\")\n",
+    "\n",
+    "# Step 9 Test the final model\n",
+    "labels_test_pred = final_model.predict(images_test)\n",
+    "final_accuracy = np.mean(np.argmax(labels_test, axis=1) == labels_test_pred)\n",
+    "print(f\"Final Test Accuracy: {final_accuracy}\")\n",
+    "testing_time = datetime.datetime.now()\n",
+    "print(f\"testing time: {testing_time - train_time}\")\n",
     "\n",
     "end_time = datetime.datetime.now()\n",
     "print(f\"End Time: {end_time}\")\n",
     "print(f\"Total Duration: {end_time - start_time}\")\n"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": null
   },
   {
    "metadata": {},
