fixed some bugs

--- a/KNN.ipynb
+++ b/KNN.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "from data_loading import load_data\n",
-    "from KNN import KNN\n",
+    "from KNN import KNN, cross_validate_knn\n",
     "from skimage.feature import hog\n",
     "from sklearn.decomposition import PCA\n",
     "from sklearn.preprocessing import StandardScaler, LabelEncoder\n",
@@ -74,36 +74,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Validation Accuracy for fold: 0.5203508771929825\n",
-      "Validation Accuracy for fold: 0.5136842105263157\n"
+      "Final Test Accuracy: 0.5371929824561403\n"
      ]
     }
    ],
    "source": [
-    "### K-Fold Cross-Validation ###\n",
-    "def cross_validate_knn(X, y, k=7, num_folds=5):\n",
-    "    kf = KFold(n_splits=num_folds, shuffle=True, random_state=42)\n",
-    "    fold_accuracies = []\n",
-    "\n",
-    "    for train_index, val_index in kf.split(X):\n",
-    "        x_train, x_val = X[train_index], X[val_index]\n",
-    "        y_train, y_val = y[train_index], y[val_index]\n",
-    "\n",
-    "        # Train and evaluate k-NN model\n",
-    "        knn = KNN(k=k)\n",
-    "        knn.fit(x_train, y_train)\n",
-    "\n",
-    "        y_val_pred = knn.predict(x_val)\n",
-    "        val_accuracy = np.mean(y_val == y_val_pred)\n",
-    "        fold_accuracies.append(val_accuracy)\n",
-    "        print(f\"Validation Accuracy for fold: {val_accuracy}\")\n",
-    "\n",
-    "    avg_accuracy = np.mean(fold_accuracies)\n",
-    "    print(f\"Average Cross-Validation Accuracy: {avg_accuracy}\")\n",
-    "    return avg_accuracy\n",
-    "\n",
     "# Perform cross-validation with k=5 and 5 folds\n",
-    "cross_validation_accuracy = cross_validate_knn(X_normalized, y_encoded, k=5, num_folds=5)\n",
+    "#cross_validation_accuracy = cross_validate_knn(X_normalized, y_encoded, k=5, num_folds=5)\n",
     "\n",
     "### Final Model Training and Testing ###\n",
     "\n",
