--- a/Digit_LR.ipynb
+++ b/Digit_LR.ipynb
@@ -3,13 +3,13 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-16T16:47:27.701477Z",
-     "start_time": "2024-11-16T16:42:59.209912Z"
+     "end_time": "2024-11-17T15:08:49.905495Z",
+     "start_time": "2024-11-17T15:04:33.310543Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "from image_util import load_digits_images, to_grayscale, to_histgram, to_pca, to_norm\n",
+    "from image_util import load_digits_images, to_grayscale, to_histgram, to_pca, to_norm, pipe_from_folder_to_norm\n",
     "import datetime\n",
     "from sklearn.preprocessing import LabelEncoder\n",
     "from sklearn.model_selection import train_test_split\n",
@@ -58,8 +58,7 @@
     "# Step 6 - # Split into training, validation, and test sets\n",
     "images_train_full, images_test, labels_train_full, labels_test = train_test_split(norm_images, labels_one_hot,\n",
     "                                                                                  test_size=0.2, random_state=42)\n",
-    "images_train, images_val, labels_train, labels_val = train_test_split(images_train_full, labels_train_full,\n",
-    "                                                                      test_size=0.2, random_state=42)\n",
+    "\n",
     "split_time = datetime.datetime.now()\n",
     "print(f\"split dataset time: {split_time - one_hot_time}\")\n",
     "\n",
@@ -69,15 +68,18 @@
     "print(f\"cross validation time: {cross_validation_time - split_time}\")\n",
     "\n",
     "# Step 8 - Train the model\n",
-    "final_model = LogisticRegression(input_size=images_train_full.shape[1],\n",
-    "                                 num_classes=labels_train_full.shape[1],\n",
-    "                                 learning_rate=0.1,\n",
-    "                                 regularization=0.001)\n",
-    "\n",
+    "final_model = LogisticRegression(\n",
+    "    input_size=images_train_full.shape[1],\n",
+    "    num_classes=labels_train_full.shape[1],\n",
+    "    learning_rate=0.1,\n",
+    "    regularization=0.001,\n",
+    ")\n",
     "final_model.train(images_train_full, labels_train_full, epochs=1000)\n",
     "\n",
     "# save the model\n",
-    "final_model\n",
+    "print(f\"saving the model state...\")\n",
+    "final_model.save_model(\"./digits_model\")\n",
+    "\n",
     "train_time = datetime.datetime.now()\n",
     "print(f\"train time: {train_time - cross_validation_time}\")\n",
     "\n",
@@ -97,7 +99,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Start Time 2024-11-16 17:43:01.612561\n",
+      "Start Time 2024-11-17 16:04:35.344960\n",
       "Opening folder ./dataset/digits/0 ...\n",
       "Opening folder ./dataset/digits/1 ...\n",
       "Opening folder ./dataset/digits/2 ...\n",
@@ -108,89 +110,148 @@
       "Opening folder ./dataset/digits/7 ...\n",
       "Opening folder ./dataset/digits/8 ...\n",
       "Opening folder ./dataset/digits/9 ...\n",
-      "loading time: 0:00:43.948185\n",
-      "grayscale time: 0:00:15.849489\n",
-      "histogram time: 0:02:14.828673\n",
-      "pca time: 0:00:05.727676\n",
-      "norm time: 0:00:00.036328\n",
+      "loading time: 0:00:49.950902\n",
+      "grayscale time: 0:00:19.869458\n",
+      "histogram time: 0:01:40.573673\n",
+      "pca time: 0:00:07.907141\n",
+      "norm time: 0:00:00.042501\n",
       "label Encoding time: 0:00:00\n",
-      "split dataset time: 0:00:00.029070\n",
-      "Epoch 0, Loss: 2.3160359781402438\n",
-      "Epoch 100, Loss: 0.85908586812031\n",
-      "Epoch 200, Loss: 0.6843246591930068\n",
-      "Epoch 300, Loss: 0.6200188077297538\n",
-      "Epoch 400, Loss: 0.586283369829932\n",
-      "Epoch 500, Loss: 0.5655067266929087\n",
-      "Epoch 600, Loss: 0.5514862545285053\n",
-      "Epoch 700, Loss: 0.5414495158674457\n",
-      "Epoch 800, Loss: 0.5339615983712168\n",
-      "Epoch 900, Loss: 0.5282019047074813\n",
-      "Validation Accuracy for fold: 0.8443516585479007\n",
-      "Epoch 0, Loss: 2.312643929431405\n",
-      "Epoch 100, Loss: 0.8560258322009423\n",
-      "Epoch 200, Loss: 0.681904416502755\n",
-      "Epoch 300, Loss: 0.6178606297558445\n",
-      "Epoch 400, Loss: 0.5842952034447019\n",
-      "Epoch 500, Loss: 0.5636441097501322\n",
-      "Epoch 600, Loss: 0.5497200424533274\n",
-      "Epoch 700, Loss: 0.5397585267498568\n",
-      "Epoch 800, Loss: 0.5323298173161525\n",
-      "Epoch 900, Loss: 0.5266169619411074\n",
-      "Validation Accuracy for fold: 0.8362328926003247\n",
-      "Epoch 0, Loss: 2.313580841711126\n",
-      "Epoch 100, Loss: 0.8587035174765713\n",
-      "Epoch 200, Loss: 0.6844712271854244\n",
-      "Epoch 300, Loss: 0.6203016942272275\n",
-      "Epoch 400, Loss: 0.5866493590946815\n",
-      "Epoch 500, Loss: 0.5659430437499618\n",
-      "Epoch 600, Loss: 0.5519849285241712\n",
-      "Epoch 700, Loss: 0.5420030419884722\n",
-      "Epoch 800, Loss: 0.5345627516700805\n",
-      "Epoch 900, Loss: 0.5288439637482344\n",
-      "Validation Accuracy for fold: 0.8475991649269311\n",
-      "Epoch 0, Loss: 2.2959847939242697\n",
-      "Epoch 100, Loss: 0.8606020197909854\n",
-      "Epoch 200, Loss: 0.6866000573893529\n",
-      "Epoch 300, Loss: 0.6223765798170765\n",
-      "Epoch 400, Loss: 0.5886896920499847\n",
-      "Epoch 500, Loss: 0.5679588624424775\n",
-      "Epoch 600, Loss: 0.5539800882617207\n",
-      "Epoch 700, Loss: 0.5439797928518836\n",
-      "Epoch 800, Loss: 0.5365231353028341\n",
-      "Epoch 900, Loss: 0.5307900789595511\n",
-      "Validation Accuracy for fold: 0.8538622129436325\n",
-      "Epoch 0, Loss: 2.310739755327148\n",
-      "Epoch 100, Loss: 0.8546142247218294\n",
-      "Epoch 200, Loss: 0.6804795454803887\n",
-      "Epoch 300, Loss: 0.6162079873015911\n",
-      "Epoch 400, Loss: 0.5824758031652345\n",
-      "Epoch 500, Loss: 0.5617246729730284\n",
-      "Epoch 600, Loss: 0.5477453138664882\n",
-      "Epoch 700, Loss: 0.5377559691417245\n",
-      "Epoch 800, Loss: 0.530315869748996\n",
-      "Epoch 900, Loss: 0.524601344075815\n",
-      "Validation Accuracy for fold: 0.8401762932034331\n",
-      "Average Cross-Validation Accuracy: 0.8444444444444443\n",
-      "cross validation time: 0:00:54.717944\n",
-      "Epoch 0, Loss: 2.3078429579594553\n",
-      "Epoch 100, Loss: 0.8590711589363959\n",
-      "Epoch 200, Loss: 0.6844983062895432\n",
-      "Epoch 300, Loss: 0.6201777272353367\n",
-      "Epoch 400, Loss: 0.5864168572833497\n",
-      "Epoch 500, Loss: 0.5656178976030495\n",
-      "Epoch 600, Loss: 0.5515791846535174\n",
-      "Epoch 700, Loss: 0.54152766804068\n",
-      "Epoch 800, Loss: 0.5340277264378042\n",
-      "Epoch 900, Loss: 0.5282581779109337\n",
-      "train time: 0:00:10.925744\n",
-      "Final Test Accuracy: 0.8445836232892601\n",
-      "testing time: 0:00:00.002462\n",
-      "End Time: 2024-11-16 17:47:27.690082\n",
-      "Total Duration: 0:04:26.077521\n"
+      "split dataset time: 0:00:00.038460\n",
+      "Epoch 0, Loss: 2.3036667042858148\n",
+      "Epoch 100, Loss: 0.8614715363092479\n",
+      "Epoch 200, Loss: 0.6855753297770683\n",
+      "Epoch 300, Loss: 0.6206690063616267\n",
+      "Epoch 400, Loss: 0.5865979896855918\n",
+      "Epoch 500, Loss: 0.5656006378461865\n",
+      "Epoch 600, Loss: 0.551414405676085\n",
+      "Epoch 700, Loss: 0.5412415765517858\n",
+      "Epoch 800, Loss: 0.5336356723422283\n",
+      "Epoch 900, Loss: 0.5277703511344882\n",
+      "Validation Accuracy for fold: 0.8508466713059615\n",
+      "Epoch 0, Loss: 2.315926883002\n",
+      "Epoch 100, Loss: 0.858801196417859\n",
+      "Epoch 200, Loss: 0.6825634318752308\n",
+      "Epoch 300, Loss: 0.6176408510282525\n",
+      "Epoch 400, Loss: 0.5835960041836669\n",
+      "Epoch 500, Loss: 0.562633827623177\n",
+      "Epoch 600, Loss: 0.5484816763844511\n",
+      "Epoch 700, Loss: 0.5383384894074985\n",
+      "Epoch 800, Loss: 0.5307570259103479\n",
+      "Epoch 900, Loss: 0.5249111748456922\n",
+      "Validation Accuracy for fold: 0.8360009278589654\n",
+      "Epoch 0, Loss: 2.3184413852114623\n",
+      "Epoch 100, Loss: 0.8615637954777411\n",
+      "Epoch 200, Loss: 0.6854777331645759\n",
+      "Epoch 300, Loss: 0.6206400904808218\n",
+      "Epoch 400, Loss: 0.5866428076275285\n",
+      "Epoch 500, Loss: 0.5657143267273097\n",
+      "Epoch 600, Loss: 0.551589286958433\n",
+      "Epoch 700, Loss: 0.5414695293186356\n",
+      "Epoch 800, Loss: 0.5339092331277643\n",
+      "Epoch 900, Loss: 0.5280830296167478\n",
+      "Validation Accuracy for fold: 0.8522384597541174\n",
+      "Epoch 0, Loss: 2.3026191885782983\n",
+      "Epoch 100, Loss: 0.8630294083776588\n",
+      "Epoch 200, Loss: 0.6876434049571585\n",
+      "Epoch 300, Loss: 0.6227890301376846\n",
+      "Epoch 400, Loss: 0.5887292545555203\n",
+      "Epoch 500, Loss: 0.5677459793080143\n",
+      "Epoch 600, Loss: 0.5535778193042671\n",
+      "Epoch 700, Loss: 0.5434246273556539\n",
+      "Epoch 800, Loss: 0.5358382485539942\n",
+      "Epoch 900, Loss: 0.5299914696876292\n",
+      "Validation Accuracy for fold: 0.8550220366504291\n",
+      "Epoch 0, Loss: 2.296652022855077\n",
+      "Epoch 100, Loss: 0.8553944550916158\n",
+      "Epoch 200, Loss: 0.6805310984324874\n",
+      "Epoch 300, Loss: 0.615848089847693\n",
+      "Epoch 400, Loss: 0.5818965982186591\n",
+      "Epoch 500, Loss: 0.5610071057449477\n",
+      "Epoch 600, Loss: 0.5469238837026579\n",
+      "Epoch 700, Loss: 0.5368462944456744\n",
+      "Epoch 800, Loss: 0.5293258108624763\n",
+      "Epoch 900, Loss: 0.5235355874834371\n",
+      "Validation Accuracy for fold: 0.8415680816515889\n",
+      "Average Cross-Validation Accuracy: 0.8471352354442125\n",
+      "cross validation time: 0:01:03.505303\n",
+      "Epoch 0, Loss: 2.30520904423929\n",
+      "Epoch 100, Loss: 0.8610046565711497\n",
+      "Epoch 200, Loss: 0.6853569484394685\n",
+      "Epoch 300, Loss: 0.6205647176882957\n",
+      "Epoch 400, Loss: 0.5865436366790927\n",
+      "Epoch 500, Loss: 0.5655708359397106\n",
+      "Epoch 600, Loss: 0.5513979202865691\n",
+      "Epoch 700, Loss: 0.5412328120360153\n",
+      "Epoch 800, Loss: 0.5336315574606428\n",
+      "Epoch 900, Loss: 0.5277690730688644\n",
+      "saving the model state...\n",
+      "train time: 0:00:12.655234\n",
+      "Final Test Accuracy: 0.8506147065646021\n",
+      "testing time: 0:00:00.002267\n",
+      "End Time: 2024-11-17 16:08:49.899298\n",
+      "Total Duration: 0:04:14.554338\n"
      ]
     }
    ],
-   "execution_count": 1
+   "execution_count": 2
+  },
+  {
+   "metadata": {
+    "jupyter": {
+     "is_executing": true
+    },
+    "ExecuteTime": {
+     "start_time": "2025-01-10T18:58:16.422950Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "import datetime\n",
+    "from logistic_regression import LogisticRegression\n",
+    "from image_util import pipe_from_folder_to_norm\n",
+    "import numpy as np\n",
+    "\n",
+    "model_filename = \"./digits_model\"\n",
+    "base_folder = r\"./dataset/digits\"\n",
+    "\n",
+    "start_time = datetime.datetime.now()\n",
+    "print(f\"load images and normalize\")\n",
+    "images_test = pipe_from_folder_to_norm(base_folder)\n",
+    "\n",
+    "print(f\"loading digits model file: {model_filename}\")\n",
+    "model = LogisticRegression.load_model(model_filename)\n",
+    "\n",
+    "print(f\"predict the images\")\n",
+    "labels_test_pred = model.predict(images_test)\n",
+    "\n",
+    "print(f\"calc accuracy\")\n",
+    "final_accuracy = np.mean(np.argmax(labels_test, axis=1) == labels_test_pred)\n",
+    "print(f\"Final Test Accuracy: {final_accuracy}\")\n",
+    "\n",
+    "end_time = datetime.datetime.now()\n",
+    "print(f\"End Time: {end_time}\")\n",
+    "print(f\"Total Duration: {end_time - start_time}\")"
+   ],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "load images and normalize\n",
+      "Opening folder ./dataset/digits/0 ...\n",
+      "Opening folder ./dataset/digits/1 ...\n",
+      "Opening folder ./dataset/digits/2 ...\n",
+      "Opening folder ./dataset/digits/3 ...\n",
+      "Opening folder ./dataset/digits/4 ...\n",
+      "Opening folder ./dataset/digits/5 ...\n",
+      "Opening folder ./dataset/digits/6 ...\n",
+      "Opening folder ./dataset/digits/7 ...\n",
+      "Opening folder ./dataset/digits/8 ...\n",
+      "Opening folder ./dataset/digits/9 ...\n"
+     ]
+    }
+   ],
+   "execution_count": null
   }
  ],
  "metadata": {
