--- a/Digit_LR.ipynb
+++ b/Digit_LR.ipynb
@@ -3,7 +3,7 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-17T15:08:49.905495Z",
+     "end_time": "2025-01-10T19:01:51.341806Z",
      "start_time": "2024-11-17T15:04:33.310543Z"
     }
    },
@@ -78,7 +78,7 @@
     "\n",
     "# save the model\n",
     "print(f\"saving the model state...\")\n",
-    "final_model.save_model(\"./digits_model\")\n",
+    "final_model.save_model(\"./models/digits_model\")\n",
     "\n",
     "train_time = datetime.datetime.now()\n",
     "print(f\"train time: {train_time - cross_validation_time}\")\n",
@@ -197,10 +197,8 @@
   },
   {
    "metadata": {
-    "jupyter": {
-     "is_executing": true
-    },
     "ExecuteTime": {
+     "end_time": "2025-01-10T19:01:51.291730Z",
      "start_time": "2025-01-10T18:58:16.422950Z"
     }
    },
@@ -211,7 +209,7 @@
     "from image_util import pipe_from_folder_to_norm\n",
     "import numpy as np\n",
     "\n",
-    "model_filename = \"./digits_model\"\n",
+    "model_filename = \"./models/digits_model\"\n",
     "base_folder = r\"./dataset/digits\"\n",
     "\n",
     "start_time = datetime.datetime.now()\n",
@@ -247,11 +245,25 @@
       "Opening folder ./dataset/digits/6 ...\n",
       "Opening folder ./dataset/digits/7 ...\n",
       "Opening folder ./dataset/digits/8 ...\n",
-      "Opening folder ./dataset/digits/9 ...\n"
+      "Opening folder ./dataset/digits/9 ...\n",
+      "loading digits model file: ./digits_model\n",
+      "predict the images\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "setting an array element with a sequence. The requested array has an inhomogeneous shape after 2 dimensions. The detected shape was (2, 21555) + inhomogeneous part.",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mValueError\u001B[0m                                Traceback (most recent call last)",
+      "Cell \u001B[0;32mIn[1], line 17\u001B[0m\n\u001B[1;32m     14\u001B[0m model \u001B[38;5;241m=\u001B[39m LogisticRegression\u001B[38;5;241m.\u001B[39mload_model(model_filename)\n\u001B[1;32m     16\u001B[0m \u001B[38;5;28mprint\u001B[39m(\u001B[38;5;124mf\u001B[39m\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mpredict the images\u001B[39m\u001B[38;5;124m\"\u001B[39m)\n\u001B[0;32m---> 17\u001B[0m labels_test_pred \u001B[38;5;241m=\u001B[39m \u001B[43mmodel\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mpredict\u001B[49m\u001B[43m(\u001B[49m\u001B[43mimages_test\u001B[49m\u001B[43m)\u001B[49m\n\u001B[1;32m     19\u001B[0m \u001B[38;5;28mprint\u001B[39m(\u001B[38;5;124mf\u001B[39m\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mcalc accuracy\u001B[39m\u001B[38;5;124m\"\u001B[39m)\n\u001B[1;32m     20\u001B[0m final_accuracy \u001B[38;5;241m=\u001B[39m np\u001B[38;5;241m.\u001B[39mmean(np\u001B[38;5;241m.\u001B[39margmax(labels_test, axis\u001B[38;5;241m=\u001B[39m\u001B[38;5;241m1\u001B[39m) \u001B[38;5;241m==\u001B[39m labels_test_pred)\n",
+      "File \u001B[0;32m~/code/asom98/faceRecog/logistic_regression.py:42\u001B[0m, in \u001B[0;36mLogisticRegression.predict\u001B[0;34m(self, x)\u001B[0m\n\u001B[1;32m     41\u001B[0m \u001B[38;5;28;01mdef\u001B[39;00m \u001B[38;5;21mpredict\u001B[39m(\u001B[38;5;28mself\u001B[39m, x):\n\u001B[0;32m---> 42\u001B[0m     z \u001B[38;5;241m=\u001B[39m \u001B[43mnp\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mdot\u001B[49m\u001B[43m(\u001B[49m\u001B[43mx\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[38;5;28;43mself\u001B[39;49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mw\u001B[49m\u001B[43m)\u001B[49m \u001B[38;5;241m+\u001B[39m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mb\n\u001B[1;32m     43\u001B[0m     y_hat \u001B[38;5;241m=\u001B[39m softmax(z)\n\u001B[1;32m     44\u001B[0m     \u001B[38;5;28;01mreturn\u001B[39;00m np\u001B[38;5;241m.\u001B[39margmax(y_hat, axis\u001B[38;5;241m=\u001B[39m\u001B[38;5;241m1\u001B[39m)\n",
+      "\u001B[0;31mValueError\u001B[0m: setting an array element with a sequence. The requested array has an inhomogeneous shape after 2 dimensions. The detected shape was (2, 21555) + inhomogeneous part."
      ]
     }
    ],
-   "execution_count": null
+   "execution_count": 1
   }
  ],
  "metadata": {
