--- a/ANN.ipynb
+++ b/ANN.ipynb
@@ -2,11 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-01-10T19:11:35.253848Z",
+     "start_time": "2025-01-10T19:08:04.150499Z"
+    }
+   },
    "source": [
-    "import numpy as np\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.preprocessing import LabelEncoder, StandardScaler\n",
     "from sklearn.decomposition import PCA\n",
@@ -76,31 +78,36 @@
     "y_test_pred = ann_model.predict(X_test)\n",
     "test_accuracy = np.mean(np.argmax(y_test, axis=1) == y_test_pred)\n",
     "print(f\"Test Accuracy: {test_accuracy}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
+   ],
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 0, Loss: 1.6090544427929978\n",
-      "Epoch 100, Loss: 1.1275105927648845\n",
-      "Epoch 200, Loss: 0.9506268175639765\n",
-      "Epoch 300, Loss: 0.8800894375806178\n",
-      "Epoch 400, Loss: 0.8303845880890773\n",
-      "Epoch 500, Loss: 0.7786031108686623\n",
-      "Epoch 600, Loss: 0.725426376608246\n",
-      "Epoch 700, Loss: 0.6724968872835336\n",
-      "Epoch 800, Loss: 0.6209458135886696\n",
-      "Epoch 900, Loss: 0.5714262561502951\n",
-      "Test Accuracy: 0.6508771929824562\n"
+      "Epoch 0, Loss: 1.6095457621232012\n",
+      "Epoch 100, Loss: 1.569401007308989\n",
+      "Epoch 200, Loss: 1.543104643972626\n",
+      "Epoch 300, Loss: 1.524851275839507\n",
+      "Epoch 400, Loss: 1.5111859822266227\n",
+      "Epoch 500, Loss: 1.4998685216766516\n",
+      "Epoch 600, Loss: 1.489247860544665\n",
+      "Epoch 700, Loss: 1.4779029012864973\n",
+      "Epoch 800, Loss: 1.464381025672931\n",
+      "Epoch 900, Loss: 1.4470515028775779\n",
+      "Test Accuracy: 0.5347368421052632\n"
      ]
     }
    ],
+   "execution_count": 1
+  },
+  {
+   "cell_type": "code",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-01-10T19:38:24.018063Z",
+     "start_time": "2025-01-10T19:37:47.803268Z"
+    }
+   },
    "source": [
     "### Train ANN Model ###\n",
     "input_size = X_normalized.shape[1]\n",
@@ -114,7 +121,27 @@
     "y_test_pred = ann_model.predict(X_test)\n",
     "test_accuracy = np.mean(np.argmax(y_test, axis=1) == y_test_pred)\n",
     "print(f\"Test Accuracy: {test_accuracy}\")"
-   ]
+   ],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 0, Loss: 1.6095457621232012\n",
+      "Epoch 100, Loss: 1.1344225703198134\n",
+      "Epoch 200, Loss: 0.9550860878961374\n",
+      "Epoch 300, Loss: 0.8798689558934963\n",
+      "Epoch 400, Loss: 0.830140777862259\n",
+      "Epoch 500, Loss: 0.7788684558888957\n",
+      "Epoch 600, Loss: 0.7271093080836774\n",
+      "Epoch 700, Loss: 0.6758641456750776\n",
+      "Epoch 800, Loss: 0.6260753033956059\n",
+      "Epoch 900, Loss: 0.5787972792962862\n",
+      "Test Accuracy: 0.6456140350877193\n"
+     ]
+    }
+   ],
+   "execution_count": 2
   }
  ],
  "metadata": {
